# bevy-notify-blender-issue

./: Cargo.toml  README.md
assets/sources/: test.blend
imported_assets/: log
src/: main.rs
